--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <!-- Search Engines -->
-  <meta name="description" content="Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the WebGL and HTML5 technologies.">
+  <meta name="description" content="interactive furniture design and customizing web app">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Verge3D Web Interactive">
-  <meta name="twitter:description" content="Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the WebGL and HTML5 technologies.">
+  <meta name="twitter:title" content="title">
+  <meta name="twitter:description" content="interactive furniture design and customizing web app">
   <meta name="twitter:image:src" content="https://cdn.soft8soft.com/images/player_socials.jpg">
   <!-- Open Graph -->
-  <meta property="og:title" content="Verge3D Web Interactive">
-  <meta property="og:description" content="Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the WebGL and HTML5 technologies.">
+  <meta property="og:title" content="title">
+  <meta property="og:description" content="interactive furniture design and customizing web app.">
   <meta property="og:image" content="https://cdn.soft8soft.com/images/player_socials.jpg">
   <meta property="og:type" content="website">
 
