--- a/table3.html
+++ b/table3.html
@@ -40,7 +40,7 @@
 
   <link rel="stylesheet" type="text/css" href="table3.css">
   <style>
-    .loader{
+    /* .loader{
   position: fixed;
   top: 0;
   left: 0;
@@ -58,17 +58,17 @@
 }
 @keyframes vanish {
   100%{
-    /* opacity: 0; */
+     opacity: 0; 
     visibility: hidden;
   }
-}
+} */
   </style>
 </head>
 
 <body class="bg-light" style="overflow: visible;">
-  <div id="loader" class="loader">
+  <!-- <div id="loader" class="loader">
     <img src="load-gif.gif" alt="">
-  </div>
+  </div> -->
   <!-- <nav class="navbar navbar-expand-sm bg-white navbar-light shadow-sm">
     <a class="navbar-brand" href="#">Logo</a>
     <ul class="navbar-nav">
